--- a/Game-of-Life-HS.cabal
+++ b/Game-of-Life-HS.cabal
@@ -68,7 +68,8 @@ executable Game-of-Life-HS
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:    base ^>=4.18.3.0,
+                      gloss ^>=1.13
 
     -- Directories containing source files.
     hs-source-dirs:   app
