--- a/Game-of-Life-HS.cabal
+++ b/Game-of-Life-HS.cabal
@@ -70,7 +70,8 @@ executable Game-of-Life-HS
     -- Other library packages from which modules are imported.
     build-depends:    base ^>=4.18.3.0,
                       gloss ^>=1.13,
-                      random
+                      random,
+                      containers
 
     -- Directories containing source files.
     hs-source-dirs:   app
